src/k8s_app/nginx/kubectl/nginx-service.yaml
apiVersion: v1                                                                                                                                                                                                                           
kind: Service                                                                                                                                                                                                                          
metadata:                                                                                                                                                                                                                              
    annotations:                                                                                                                                                                                                                         
      meta.helm.sh/release-name: ingress-nginx                                                                                                                                                                                           
      meta.helm.sh/release-namespace: ingress-nginx                                                                                                                                                                                      
    labels:                                                                                                                                                                                                                              
      app.kubernetes.io/component: controller                                                                                                                                                                                            
      app.kubernetes.io/instance: ingress-nginx                                                                                                                                                                                          
      app.kubernetes.io/managed-by: Helm                                                                                                                                                                                                 
      app.kubernetes.io/name: ingress-nginx                                                                                                                                                                                              
      app.kubernetes.io/part-of: ingress-nginx                                                                                                                                                                                           
      app.kubernetes.io/version: 1.2.0                                                                                                                                                                                                   
      helm.sh/chart: ingress-nginx-4.1.0                                                                                                                                                                                                 
    name: ingress-nginx-controller                                                                                                                                                                                                       
    namespace: ingress-nginx                                                                                                                                                                                                                                                                                                                                                                                                       
spec:
  clusterIP: 10.105.24.201                                                                                                                                                                                                                                                                                                                                                                                                                                       
  ports:                                                                                                                                                                                                                               
  - name: http                                                                                                                                                                                                                         
    port: 80
    protocol: TCP                                                                                                                                                                                                                      
    targetPort: http                                                                                                                                                                                                                   
  - name: https                                                                                                                                                                                                                                                                                                                                                                                                                                        
    port: 443
    protocol: TCP                                                                                                                                                                                                                      
    targetPort: https                                                                                                                                                                                                                  
  selector:                                                                                                                                                                                                                            
    app.kubernetes.io/component: controller                                                                                                                                                                                            
    app.kubernetes.io/instance: ingress-nginx                                                                                                                                                                                          
    app.kubernetes.io/name: ingress-nginx                                                                                                                                                                                                                                                                                                                                                                                                              
  type: LoadBalancer
  externalIPs:
    - 192.168.50.200
